All Jest Get requests created and a couple modifications made to the actual functions in the controllers.
