# swagger.json
@@ -5,7 +5,7 @@
     "description": "DESC Users API",
     "version": "1.0.0"
   },
-  "host": "ws341-contacts-project.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "https",
@@ -461,11 +461,6 @@
     "destination": {
       "type": "object",
       "properties": {
-        "photo": {
-          "type": "array",
-          "example": [],
-          "items": {}
-        },
         "city": {
           "type": "string",
           "example": "Rome"
@@ -474,14 +469,10 @@
           "type": "string",
           "example": "Italy"
         },
-        "photos": {
+        "photo": {
           "type": "array",
           "example": [],
           "items": {}
-        },
-        "description": {
-          "type": "string",
-          "example": "The capital city of Italy, famous for its nearly 3,000 years of globally influential art, architecture, and culture."
         },
         "tourismSpots": {
           "type": "array",
